<resources>
    <string name="app_name">COMP3275_GROUP_PROJECT</string>
    <string name="landing_activity_app_name">
        DCIT APP
    </string>
    <string name="landing_activity_welcome">
        Welcome!
    </string>
    <string name="landing_activity_description">
        This is a mobile version of the Department of Computing and Information Technology website
    </string>
    <string name="homepage_activity_select">
        Select a BSc. Programme to see the level three (3) courses available
    </string>

    <string name="computer_science">
        Computer Science (Special)
    </string>

    <string name="computer_science_drawer_heading">
        Level three (3) Comp Sci Courses
    </string>


    <string name="information_technology_drawer_heading">
         Level three (3) I.T Courses
    </string>

    <string name="information_technology">
        Information Technology (Special)
    </string>
    <string name="title_activity_computer_science">ComputerScienceActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_information_technology">InformationTechnologyActivity</string>
    <string name="title_activity_revised_home_page">Welcome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="programmes">Programmes</string>
    <string name="news">News</string>
    <string name="staff">Staff</string>
    <string name="university_logo">University Logo</string>
    <string name="get_started">Get Started</string>
    <string name="semoffer">Semester Offered:</string>
    <string name="course_name">Course Name</string>
    <string name="lecturereimage">Lecturer Image</string>
    <string name="email">Email:</string>
    <string name="office_contact">Office Contact</string>
    <string name="comp">COMP</string>
</resources>
