<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/primary_light"
        android:text="@string/homepage_activity_select"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp"/>

    <Button
        android:id="@+id/compSciButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleText"
        android:layout_marginTop="99dp"
        android:background="@color/colorPrimary"
        android:text="@string/computer_science"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/ITButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/compSciButton"
        android:layout_marginTop="84dp"
        android:background="@color/colorPrimary"
        android:text="@string/information_technology"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"/>
</RelativeLayout>